Update plugin